RX / TX Messages The minSDK is now 18, BTLE does not work well on anything below that. MainActivity will ask for location permission as required for BTLE results.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThemeNoTitle" parent="@android:style/Theme.Light">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowTitleSize">30dp</item>
+    </style>
+
 </resources>
