--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="light_gray">#F4F4F4</color>
 </resources>
