--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,18 @@
 <resources>
 
-    <style name="AppThemeNoTitle" parent="@android:style/Theme.Light">
-        <item name="android:windowNoTitle">true</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="android:windowTitleSize">30dp</item>
+        <item name="android:windowActionBar">@style/AppTheme.ActionBar</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+
+    <style name="AppTheme.ActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/light_gray</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/black</item>
     </style>
 
 </resources>
